testdata/update/error.txtar
# Repo without GitHub Actions
! exec ghasum update no-actions/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'ghasum has not yet been initialized'

# Uninitialized repo with GitHub Actions
! exec ghasum update uninitialized/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'ghasum has not yet been initialized'

# Sumfile with syntax error
! exec ghasum verify sumfile-syntax/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'syntax error on line 3'

# Sumfile with duplicate entries
! exec ghasum verify sumfile-duplicate/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'checksums are corrupted'
stderr 'duplicate entry found'

# Invalid workflow
! exec ghasum update invalid-workflow/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'could not parse workflow'
stderr '.github/workflows/workflow.yml'

# Directory not found
! exec ghasum update directory-not-found/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'no such file or directory'

-- invalid-workflow/.github/workflows/gha.sum --
version 1

actions/checkout@v4 Xl8z/l21IIpcBDsjpnq7jsBPk/RY26RwvDVL8FrajmE=
-- invalid-workflow/.github/workflows/workflow.yml --
name: Faulty workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-22.04
    steps:
  - name: Checkout repository
    uses: actions/checkout@v4
-- no-actions/.keep --
This file exists to create a repo that does not use Github Actions.
-- sumfile-duplicate/.github/workflows/gha.sum --
version 1

actions/checkout@v4 rfcqiYqRAnhqMjwnw/oJp2lqI5zRjHTtu2vQ9/ss4x0=
actions/checkout@v4 oJp2lqI5zRjHTtu2vQ9/rfcqiYqRAnhqMjwnw/ss4x0=
-- sumfile-syntax/.github/workflows/gha.sum --
version 1

this-action/is-missing@a-checksum
-- uninitialized/.github/workflows/workflow.yml --
name: Example workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-22.04
    steps:
    - name: Checkout repository
      uses: actions/checkout@v4
    - name: Install Go
      uses: actions/setup-go@v5
      with:
        go-version-file: go.mod
    - name: This step does not use an action
      run: Echo 'hello world!'
